@@ -1,3 +1,10 @@
+2010-10-24  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* soap-client.el (soap-wsdl): add origin slot
+	(soap-load-wsdl-from-url, soap-load-wsdl): populate origin slot
+
+	* soap-inspect.el (soap-client): 0 new file
+
 2010-10-22  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* soap-client.el (soap-wsdl-get): convert the name to a string if
